// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationBoundary matches the snapshot when the geometry is a single polygon in valid GeoJSON format 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiBox-root MuiBox-root-16 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit"
      >
        Project Location
      </h3>
      <div
        class="MuiBox-root MuiBox-root-17"
      >
        <button
          aria-label="Edit Project Location"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          data-testid="h2-button-toolbar-Edit"
          id="h2-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Location"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-18"
    >
      <div
        class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="project_location_form_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 2;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/0/0/0"
                  style="width: 256px; height: 256px; left: -38px; top: -79px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          >
            <svg
              height="0"
              pointer-events="none"
              style="left: 0px; top: 0px;"
              viewBox="0 0 0 0"
              width="0"
            >
              <g>
                <path
                  class="leaflet-interactive"
                  d="M-1 2L0 -2z"
                  fill="#3388ff"
                  fill-opacity="0.2"
                  fill-rule="evenodd"
                  stroke="#3388ff"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-opacity="1"
                  stroke-width="3"
                />
              </g>
            </svg>
          </div>
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="true"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out leaflet-disabled"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                role="button"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <span>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_74"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </span>
                  </label>
                  <label>
                    <span>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_74"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JavaScript library for interactive maps"
              >
                <svg
                  aria-hidden="true"
                  class="leaflet-attribution-flag"
                  height="8"
                  viewBox="0 0 12 8"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h12v4H0z"
                    fill="#4C7BE1"
                  />
                  <path
                    d="M0 4h12v3H0z"
                    fill="#FFD500"
                  />
                  <path
                    d="M0 7h12v1H0z"
                    fill="#E0BC00"
                  />
                </svg>
                 Leaflet
              </a>
               
              <span
                aria-hidden="true"
              >
                |
              </span>
               © 
              <a
                href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
              >
                ESRI Basemap
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-19"
      >
        <button
          aria-label="zoom to initial extent"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-zoomToBoundaryExtentBtn-15"
          tabindex="0"
          title="Zoom to initial extent"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              role="presentation"
              style="width: 1.5rem; height: 1.5rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z"
                style="fill: currentColor;"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-20"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        Location Description
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Location description
      </p>
    </div>
    <button
      aria-label="Show Expanded Location"
      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
      tabindex="0"
      title="Expand Location"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Show More
        <span
          class="MuiButton-endIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.3125rem; height: 1.3125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`LocationBoundary matches the snapshot when there is no geometry 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiBox-root MuiBox-root-9 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit"
      >
        Project Location
      </h3>
      <div
        class="MuiBox-root MuiBox-root-10"
      >
        <button
          aria-label="Edit Project Location"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          data-testid="h2-button-toolbar-Edit"
          id="h2-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Location"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-11"
    >
      <div
        class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="project_location_form_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 2;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
                  style="width: 256px; height: 256px; left: -159px; top: -31px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                role="button"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <span>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_54"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </span>
                  </label>
                  <label>
                    <span>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_54"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JavaScript library for interactive maps"
              >
                <svg
                  aria-hidden="true"
                  class="leaflet-attribution-flag"
                  height="8"
                  viewBox="0 0 12 8"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h12v4H0z"
                    fill="#4C7BE1"
                  />
                  <path
                    d="M0 4h12v3H0z"
                    fill="#FFD500"
                  />
                  <path
                    d="M0 7h12v1H0z"
                    fill="#E0BC00"
                  />
                </svg>
                 Leaflet
              </a>
               
              <span
                aria-hidden="true"
              >
                |
              </span>
               © 
              <a
                href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
              >
                ESRI Basemap
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-12"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        Location Description
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        Location description
      </p>
    </div>
    <button
      aria-label="Show Expanded Location"
      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
      tabindex="0"
      title="Expand Location"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Show More
        <span
          class="MuiButton-endIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.3125rem; height: 1.3125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`LocationBoundary matches the snapshot when there is no location description 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiBox-root MuiBox-root-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular"
      style="justify-content: space-between;"
    >
      <h3
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit"
      >
        Project Location
      </h3>
      <div
        class="MuiBox-root MuiBox-root-3"
      >
        <button
          aria-label="Edit Project Location"
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
          data-testid="h2-button-toolbar-Edit"
          id="h2-button-toolbar-Edit"
          tabindex="0"
          title="Edit Project Location"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeMedium"
            >
              <svg
                role="presentation"
                style="width: 1.3125rem; height: 1.3125rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                  style="fill: currentColor;"
                />
              </svg>
            </span>
            <strong>
              Edit
            </strong>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        class="leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="project_location_form_map"
        style="height: 100%; position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 2;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://server.arcgisonline.com/ArcGIS/rest/services/World_Topo_Map/MapServer/tile/5/10/4"
                  style="width: 256px; height: 256px; left: -159px; top: -31px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-control-fullscreen leaflet-bar leaflet-control"
            >
              <a
                class="leaflet-control-fullscreen-button leaflet-bar-part"
                href="#"
                title="View Fullscreen"
              />
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              aria-haspopup="true"
              class="leaflet-control-layers leaflet-control"
            >
              <a
                class="leaflet-control-layers-toggle"
                href="#"
                role="button"
                title="Layers"
              />
              <section
                class="leaflet-control-layers-list"
              >
                <div
                  class="leaflet-control-layers-base"
                >
                  <label>
                    <span>
                      <input
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_34"
                        type="radio"
                      />
                      <span>
                         BC Government
                      </span>
                    </span>
                  </label>
                  <label>
                    <span>
                      <input
                        checked="checked"
                        class="leaflet-control-layers-selector"
                        name="leaflet-base-layers_34"
                        type="radio"
                      />
                      <span>
                         Esri Imagery
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="leaflet-control-layers-separator"
                  style="display: none;"
                />
                <div
                  class="leaflet-control-layers-overlays"
                />
              </section>
            </div>
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                title="A JavaScript library for interactive maps"
              >
                <svg
                  aria-hidden="true"
                  class="leaflet-attribution-flag"
                  height="8"
                  viewBox="0 0 12 8"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h12v4H0z"
                    fill="#4C7BE1"
                  />
                  <path
                    d="M0 4h12v3H0z"
                    fill="#FFD500"
                  />
                  <path
                    d="M0 7h12v1H0z"
                    fill="#E0BC00"
                  />
                </svg>
                 Leaflet
              </a>
               
              <span
                aria-hidden="true"
              >
                |
              </span>
               © 
              <a
                href="https://www.esri.com/en-us/arcgis/products/location-services/services/basemaps"
              >
                ESRI Basemap
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-5"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        Location Description
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        No Description
      </p>
    </div>
    <button
      aria-label="Show Expanded Location"
      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
      tabindex="0"
      title="Expand Location"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Show More
        <span
          class="MuiButton-endIcon MuiButton-iconSizeMedium"
        >
          <svg
            role="presentation"
            style="width: 1.3125rem; height: 1.3125rem;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
              style="fill: currentColor;"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
